# summary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  aerich.ini  docker-compose.yml  dockerfile  makefile  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/: main.py
src/core/: base.py  common.py  config.py  constants.py  error.py  errors.py  formats.py  mixins.py  repos.py  resp.py  scraper.py  success.py  types.py
src/core/clients/: __init__.py  cache.py  common_crawl.py  http.py  playwright.py  playwright_client.py  soup.py
src/core/libs/: common.py
src/db/: __init__.py  database.py  validators.py
src/db/migrations/models/: 1_20250514173146_state.py  1_20250514181249_state.py  1_20250710152912_state.py  1_20250714174918_state.py  1_20250715060235_task.py  1_20250913195444_task.py  1_20250914171641_task.py  2_20250514182412_url.py  2_20250523034054_url.py  2_20250710152956_url.py  2_20250715060433_url.py  2_20250913200039_url.py  3_20250627040559_raw.py  3_20250710153026_raw.py  3_20250906205940_raw.py  3_20250913200129_data.py  3_20250914172139_data.py
src/db/models/: __init__.py  base.py  data.py  raw.py  state.py  status.py  task.py  url.py
src/repos/: __init__.py  data.py  raw.py  raw_repo.py  state_repo.py  task.py  url.py  url_repo.py
src/routes/: __init__.py  etl.py  health.py
src/routes/crawl/: __init__.py  crawl.py
src/routes/health/: health.py
src/schemas/: health.py
src/schemas/health/: health.py
src/services/: __init__.py  crawl.py  deps.py  extract.py  health.py
