[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summary"
version = "0.0.1"
description = "Summary application to summarize the scraped data"
authers = [
    { name = "Roman", email = "iamromandev@gmail.com" }
]
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "loguru>=0.7.3",
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "pydantic[email,timezone]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "tortoise-orm[accel,aiomysql]>=0.25.0",
    "playwright>=1.52.0",
    "spacy>=3.8.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
]

[tool.uv]
package = false
