[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "summary"
version = "0.0.1"
description = "Summary application to summarize the scraped data"
authors = [
    { name = "Roman", email = "iamromandev@gmail.com" },
]
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "loguru>=0.7.3",
    "uvicorn>=0.34.2",
    "fastapi[all]>=0.115.12",
    "pydantic[email,timezone]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "tortoise-orm[accel,aiomysql]>=0.25.0",
    "aerich[toml,mysql]>=0.9.0",
    "redis>=6.1.0",
    "httpx>=0.28.1",
    "playwright>=1.52.0",
    "spacy>=3.8.5",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "ty>=0.0.1a6",
]

[tool.uv]
package = false

[tool.aerich]
tortoise_orm = "src.db.DB_CONFIG"
location = "./src/db/migrations"
src_folder = "./."
